<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewStudentActivity">

    <ImageView
        android:id="@+id/new_student_img"
        android:layout_width="190dp"
        android:layout_height="194dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/new_student_id_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/IdField"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/new_student_name_title_tv"
        app:layout_constraintTop_toBottomOf="@+id/new_student_name_title_tv" />

    <TextView
        android:id="@+id/new_student_name_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/NameField"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintStart_toStartOf="@id/new_student_img"
        app:layout_constraintTop_toBottomOf="@id/new_student_img" />

    <TextView
        android:id="@+id/new_student_phone_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/phoneField"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/new_student_id_title_tv"
        app:layout_constraintTop_toBottomOf="@+id/new_student_id_title_tv" />

    <TextView
        android:id="@+id/new_student_address_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/addressField"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/new_student_phone_title_tv"
        app:layout_constraintTop_toBottomOf="@+id/new_student_phone_title_tv" />

    <CheckBox
        android:id="@+id/new_student_checked_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/checkedField"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/new_student_address_title_tv"
        app:layout_constraintTop_toBottomOf="@+id/new_student_address_title_tv" />

    <EditText
        android:id="@+id/new_student_name_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/new_student_name_title_tv"
        app:layout_constraintStart_toEndOf="@+id/new_student_name_title_tv"
        app:layout_constraintTop_toTopOf="@+id/new_student_name_title_tv" />

    <EditText
        android:id="@+id/new_student_id_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/new_student_id_title_tv"
        app:layout_constraintStart_toEndOf="@+id/new_student_id_title_tv"
        app:layout_constraintTop_toTopOf="@+id/new_student_id_title_tv"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/new_student_phone_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/new_student_phone_title_tv"
        app:layout_constraintStart_toEndOf="@+id/new_student_phone_title_tv"
        app:layout_constraintTop_toTopOf="@+id/new_student_phone_title_tv" />

    <EditText
        android:id="@+id/new_student_address_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/new_student_address_title_tv"
        app:layout_constraintStart_toEndOf="@+id/new_student_address_title_tv"
        app:layout_constraintTop_toTopOf="@+id/new_student_address_title_tv" />

    <Button
        android:id="@+id/new_student_cancel_btn"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/cancelBtn"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/new_student_save_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"  />

    <Button
        android:id="@+id/new_student_save_btn"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/saveBtn"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/new_student_cancel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/new_student_cancel_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>